[project]
name = "hnswlib-server"
version = "0.1.0"
description = "Integ test running for the hnswlib server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=26.1.0",
    "numpy>=2.4.2",
    "pycurl>=7.45.7",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
